--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,13 @@
+<center>
+<h1>Absenteeism hour prediction</h1>
+
 <form method="POST">
     <input name="data">
     <input type="submit">
 </form>
 
 
+<h3>Provided input to the application should be in proper format as shown below</h3>
+<h4>'ID', 'Reason for absence', 'Month of absence', 'Day of the week', 'Seasons', 'Transportation expense', 'Distance from Residence to Work', 'Service time', 'Age', 'Work load Average/day ', 'Disciplinary failure', 'Son', 'Social drinker', 'Social smoker', 'Pet', 'Weight', 'Body mass index'</h4>
+<h4>Can use this data as example : 11,26 , 7 , 3 ,1,289 , 36 , 13, 33, 239.554 , 0, 2, 1, 0, 1, 90 , 30</h4>
+</center>
